# tacktech

./: .hgignore  CMakeLists.txt  Changelog.txt  ProjectHome.md  TODO.txt
Artemis_Server/: Artemis_Network_Sender.cpp  Artemis_Network_Sender.h  Artemis_Network_Sender_Connection.cpp  Artemis_Network_Sender_Connection.h  Artemis_Request_Handler.cpp  Artemis_Request_Handler.h  Artemis_SQL_Handler.h  Artemis_Server.cpp  Artemis_Server.h  Artemis_Server_Connection.cpp  Artemis_Server_Connection.h  CMakeLists.txt  main.cpp  server.ini
Artemis_Server/src/: Artemis_Network_Sender.cpp  Artemis_Network_Sender.h  Artemis_Network_Sender_Connection.cpp  Artemis_Network_Sender_Connection.h  Artemis_Request_Handler.cpp  Artemis_Request_Handler.h  Artemis_SQL_Handler.cpp  Artemis_SQL_Handler.h  Artemis_Server.cpp  Artemis_Server.h  Artemis_Server_Connection.cpp  Artemis_Server_Connection.h  Group_Container.cpp  Group_Container.h  Group_Container_Server.cpp  Group_Container_Server.h  Group_Playlist_Container.cpp  Group_Playlist_Container.h  Group_Playlist_Container_Server.cpp  Group_Playlist_Container_Server.h  Playlist_Container.cpp  Playlist_Container.h  Playlist_Container_Server.cpp  Playlist_Container_Server.h
NewsTicker/: CMakeLists.txt  main.cpp
NewsTicker/src/: NewsTicker.cpp  NewsTicker.h
Tacktech_Common/: CMakeLists.txt
Tacktech_Common/src/: Display_Client.cpp  Display_Client.h  Display_Client_Container.cpp  Display_Client_Container.h  Filelist.cpp  Filelist.h  Group_Container.cpp  Group_Container.h  Group_Playlist_Container.cpp  Group_Playlist_Container.h  Playlist.cpp  Playlist.h  Playlist_Container.cpp  Playlist_Container.h  Tacktech_Network_Manager.cpp  Tacktech_Network_Manager.h
Tacktech_Manager/: CMakeLists.txt  config.ini  main.cpp
Tacktech_Manager/resources/: Add_Computer_Dialog.qrc  Add_File_Dialog.qrc  Add_Group.qrc  Add_Group_Dialog.qrc  Add_Pause_Dialog.qrc  Add_Playlist_Dialog.qrc  Edit_Group.qrc  Edit_Playlist.qrc  Select_Playlist_Dialog.qrc  Tacktech_Manager.qrc
Tacktech_Manager/src/: Add_Computer_Dialog.cpp  Add_Computer_Dialog.h  Add_File_Dialog.cpp  Add_File_Dialog.h  Add_Group.cpp  Add_Group.h  Add_Group_Dialog.cpp  Add_Group_Dialog.h  Add_Pause_Dialog.cpp  Add_Pause_Dialog.h  Add_Playlist_Dialog.cpp  Add_Playlist_Dialog.h  Assign_Group.cpp  Assign_Group.h  Edit_Group.cpp  Edit_Group.h  Edit_Playlist.cpp  Edit_Playlist.h  Edit_Times.cpp  Edit_Times.h  Group_Container.cpp  Group_Container.h  Group_Playlist_Container.cpp  Group_Playlist_Container.h  Playlist_Container.cpp  Playlist_Container.h  Recieve_Data.cpp  Recieve_Data.h  Select_Playlist_Dialog.cpp  Select_Playlist_Dialog.h  Send_Data.cpp  Send_Data.h  Start_Send_Data_Thread.cpp  Start_Send_Data_Thread.h  Tacktech_Manager.cpp  Tacktech_Manager.h  Tacktech_Manager_MainWindow.cpp  Tacktech_Manager_MainWindow.h  Typed_QTreeWidgetItem.cpp  Typed_QTreeWidgetItem.h  (+7 more)
Tacktech_Manager/ui/: Add_Computer_Dialog.ui  Add_File_Dialog.ui  Add_Group.ui  Add_Group_Dialog.ui  Add_Pause_Dialog.ui  Add_Playlist_Dialog.ui  Assign_Group.ui  Edit_Group.ui  Edit_Playlist.ui  Edit_Times.ui  Select_Playlist_Dialog.ui  Tacktech_Manager.ui  Tacktech_Manager_MainWindow.ui  Upload_Data.ui  Upload_Files_To_Server_Dialog.ui
Tactek_Display/: CMakeLists.txt  config.ini  main.cpp
Tactek_Display/resources/: Tactek_Display.qrc
Tactek_Display/src/: News_Ticker.cpp  News_Ticker.h  News_Ticker_Thread.cpp  News_Ticker_Thread.h  Playlist.cpp  Playlist.h  Recieve_Data.cpp  Recieve_Data.h  Send_Data.cpp  Send_Data.h  Start_Send_Data_Thread.cpp  Start_Send_Data_Thread.h  TCPServer.cpp  TCPServer.h  Tactek_Display.cpp  Tactek_Display.h  main.cpp
Tactek_Display/ui/: Tactek_Display.ui  Tactek_Main_Window.ui
cmake/: FindLIBVLCQT.cmake
libb64/: CMakeLists.txt
libb64/base64/: base64.cc
libb64/include/b64/: cdecode.h  cencode.h  decode.h  encode.h
libb64/src/: cdecode.c  cencode.c
pugixml/contrib/: foreach.hpp
pugixml/docs/samples/: custom_memory_management.cpp  include.cpp  load_error_handling.cpp  load_file.cpp  load_memory.cpp  load_options.cpp  load_stream.cpp  modify_add.cpp  modify_base.cpp  modify_remove.cpp  save_custom_writer.cpp  save_declaration.cpp  save_file.cpp  save_options.cpp  save_stream.cpp  save_subtree.cpp  text.cpp  traverse_base.cpp  traverse_iter.cpp  traverse_predicate.cpp  traverse_rangefor.cpp  traverse_walker.cpp  xpath_error.cpp  xpath_query.cpp  xpath_select.cpp  xpath_variables.cpp
pugixml/scripts/: CMakeLists.txt
pugixml/src/: pugixml.cpp  pugixml.hpp
scripts/: Debug_x32.bat  Debug_x64.bat  Release_x32.bat  Release_x64.bat  variables.bat  vcvars64.bat
